--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
             inputs:
               azureSubscription: 'ARM_SVC'
               mavenPomFile: 'pom.xml'
-              goals: 'Maven Compile'
+              goals: 'compile'
               publishJUnitResults: true
               testResultsFiles: '**/surefire-reports/TEST-*.xml'
               javaHomeOption: 'JDKVersion'
