Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,5 +71,9 @@ stages:
               cliProjectName: 'bankapp'
               cliSources: '.'
               extraProperties: 'sonar.java.binaries=.'
+          
+          - task: SonarQubeAnalyze@7
+            inputs:
+              jdkversion: 'JAVA_HOME_17_X64'
 
 
