Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,3 +97,20 @@ stages:
               mavenAuthenticateFeed: false
               effectivePomSkip: false
               sonarQubeRunAnalysis: false
+    
+  - stage: docker_build
+    displayName: 'Docker_Build'
+    jobs:
+      - job: docker_build
+        displayName: 'Docker_Build'
+        steps:
+          - task: CmdLine@2
+            inputs:
+              script: 'maven package'
+          - task: Docker@2
+            inputs:
+              containerRegistry: 'docker-svc'
+              repository: 'devcontainer'
+              command: 'build'
+              Dockerfile: '**/Dockerfile'
+              tags: 'latest'
