Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,7 +106,7 @@ stages:
         steps:
           - task: CmdLine@2
             inputs:
-              script: 'maven package'
+              script: 'mvn package'
           - task: Docker@2
             inputs:
               containerRegistry: 'docker-svc'
