--- a/ds.yml
+++ b/ds.yml
@@ -55,7 +55,7 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image: adijaiswal/bankapp:latest
+        image: democontainer7.azurecr.io/devcontainer:latest
         ports:
         - containerPort: 8080
         env:
