--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -124,3 +124,30 @@ stages:
           - task: CmdLine@2
             inputs:
               script: 'trivy image --format table -o image.html democontainer7.azurecr.io/devcontainer:latest'
+
+  - stage: docker_publish
+    displayName: 'Docker_Publish'
+    jobs:
+      - job: docker_publish
+        displayName: 'Docker_Publish'
+        steps:
+          - task: Docker@2
+            inputs:
+              containerRegistry: 'docker-svc'
+              repository: 'devcontainer'
+              command: 'push'
+              tags: 'latest'
+
+  - stage: deploy_to_aks
+    displayName: 'Deploy_To_AKS'
+    jobs:
+      - job: deploy_to_aks
+        displayName: 'Deploy_To_AKS'
+        steps:
+          - task: KubernetesManifest@1
+            inputs:
+              action: 'deploy'
+              connectionType: 'kubernetesServiceConnection'
+              kubernetesServiceConnection: 'AKS-SVC'
+              namespace: 'default'
+              manifests: 'ds.yml'
