--- a/CICD-DevSecOps/Codes/Dockerfile
+++ b/CICD-DevSecOps/Codes/Dockerfile
@@ -1,36 +1,36 @@
 # This Dockerfile builds the Java application using Maven and runs it in a lightweight JDK environment
 # The application is built in a multi-stage build process to keep the final image small
 
-FROM maven:3.8-jdk-17 AS builder
 # Use Maven with JDK 17 as the base image for building the application
+FROM maven:3.8-jdk-17 AS builder
 
-WORKDIR /build
 # Set the working directory for the build stage
+WORKDIR /build
 
-COPY pom.xml .
 # Copy the Maven project file to the build directory
+COPY pom.xml .
 
-COPY src ./src
 # Copy the source code into the build directory
+COPY src ./src
 
-RUN mvn package -DskipTests
 # Build the application using Maven, skipping tests to speed up the build process
+RUN mvn package -DskipTests
 
-FROM eclipse-temurin:17-jdk-alpine
 # Use a lightweight JDK image for the final application
+FROM eclipse-temurin:17-jdk-alpine
 
-EXPOSE 8080 
 # Expose the application port
+EXPOSE 8080 
 
-ENV APP_HOME /usr/src/app
 # Set the application home directory
+ENV APP_HOME /usr/src/app
 
-WORKDIR $APP_HOME
 # Copy the built application from the builder stage
+WORKDIR $APP_HOME
 
-COPY --from=builder /build/target/app.jar ./app.jar
 # Copy the JAR file to the application home directory
-# Set the command to run the application
+# and Set the command to run the application
+COPY --from=builder /build/target/app.jar ./app.jar
 
-CMD ["java", "-jar", "app.jar"]
 # Use the JAR file as the entry point for the container
+CMD ["java", "-jar", "app.jar"]
